<resources>
    <string name="app_name">UFSCarona 2 </string>
    <string name="default_web_client_id">856405875390-2pm2jusu2rvdd9qq2nj924j5lfhm871j.apps.googleusercontent.com </string>
    <string name="logingoogle">LoginGoogle</string>
    <string name="google_maps_key">AIzaSyAPP_eZ4R8FpA3z4gwl6lUV6YkjEydBIDA</string>
    <string name="spinner_title">Selecione uma opção</string>
    <string-array name="planets_array">
        <item>UFSC</item>
        <item>Qualquer Lugar</item>
        <item>Qdasdas</item>
        <item>dadas</item>
    </string-array>
    <string name="spinner_title2">Selecione uma opção</string>
    <string-array name="destinos">
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="caronas_array">
        <!-- os dados serão adicionados aqui -->
    </string-array>
    <string-array name="destinos_array">
        <!-- os dados serão adicionados aqui -->
    </string-array>
    <string-array name="viagens_array">
        <!-- os dados serão adicionados aqui -->
    </string-array>

    <string name="cadastro_do_carro">Cadastro do Carro</string>
    <string name="modelo_do_carro">Modelo do Carro</string>
    <string name="ano_do_carro">Ano do Carro</string>
    <string name="placa_do_carro">Placa do Carro</string>
    <string name="capacidade_de_passageiros">Capacidade de Passageiros</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="vagas_bloco_b">Vagas Bloco B</string>
    <string name="atualizar">Atualizar</string>


</resources>