<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CadastroMotorista">

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_tittle"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/text2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cadastro_do_carro"
            android:textSize="50sp"
            android:textStyle="bold"
            android:textColor="@color/white" />

    </LinearLayout>

    <View
        android:id="@+id/container"
        style="@style/ContainerComponents"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        app:layout_constraintTop_toBottomOf="@+id/layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/ModeloCarro"
        style="@style/Edit_Text"
        android:hint="@string/modelo_do_carro"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toTopOf="@id/container" />

    <EditText
        android:id="@+id/AnoCarro"
        style="@style/Edit_Text"
        android:hint="@string/ano_do_carro"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@+id/ModeloCarro" />

    <EditText
        android:id="@+id/PlacaCarro"
        style="@style/Edit_Text"
        android:hint="@string/placa_do_carro"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@+id/AnoCarro" />

    <EditText
        android:id="@+id/Capacidade"
        style="@style/Edit_Text"
        android:hint="@string/capacidade_de_passageiros"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintTop_toBottomOf="@+id/PlacaCarro" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/CadastroMotorista"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cadastrar"
        app:layout_constraintTop_toBottomOf="@id/Capacidade"
        app:layout_constraintEnd_toEndOf="@id/container"
        app:layout_constraintStart_toStartOf="@id/container"
        app:layout_constraintBottom_toBottomOf="@id/container" />

</androidx.constraintlayout.widget.ConstraintLayout>